[gd_scene load_steps=15 format=3 uid="uid://d2vfabm3t30qs"]

[ext_resource type="Script" uid="uid://vgg14470s1na" path="res://code/examtime.gd" id="1_15do6"]
[ext_resource type="PackedScene" uid="uid://cunpmklph2hk2" path="res://scenes/chair.tscn" id="2_cel1m"]
[ext_resource type="PackedScene" uid="uid://dr40tre4pg7ti" path="res://scenes/door.tscn" id="2_lnw3n"]
[ext_resource type="Script" uid="uid://boh8uj08delqm" path="res://code/door_riddle.gd" id="4_lnw3n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_15do6"]
bg_color = Color(0.360784, 0.690196, 0.458824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cel1m"]
bg_color = Color(0.359526, 0.690334, 0.457882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnw3n"]
bg_color = Color(0.552146, 0.89906, 0.647025, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7jyl"]
bg_color = Color(0.201158, 0.421625, 0.267889, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_lnw3n"]
size = Vector3(1.11865, 1, 1.75342)

[sub_resource type="BoxShape3D" id="BoxShape3D_k7jyl"]
size = Vector3(0.938965, 2.47571, 1.63306)

[sub_resource type="BoxShape3D" id="BoxShape3D_lajc7"]
size = Vector3(0.601074, 2.54785, 1.45215)

[sub_resource type="BoxShape3D" id="BoxShape3D_cel1m"]
size = Vector3(0.485387, 2.47314, 1.487)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ppgk2"]
albedo_color = Color(0.151072, 0.37718, 0.257159, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cel1m"]
transparency = 1
albedo_color = Color(0.819608, 0.819608, 0.807843, 0.545098)
metallic = 1.0

[node name="Examroom" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_15do6")

[node name="Exam_Camera" type="Camera3D" parent="."]
transform = Transform3D(-1, 1.726e-09, -1.50962e-07, -4.23629e-09, 0.99922, 0.0394865, 1.50912e-07, 0.0394865, -0.99922, 0.0711252, 2.80306, -1.42036)
doppler_tracking = 2

[node name="Examchoices" type="CanvasLayer" parent="Exam_Camera"]
layer = 10
visible = false

[node name="ColorRect" type="ColorRect" parent="Exam_Camera/Examchoices"]
anchors_preset = -1
anchor_top = 0.751852
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.103518, 0.18697, 0.157772, 1)
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Exam_Camera/Examchoices"]
anchors_preset = -1
anchor_left = 0.239583
anchor_top = 0.783333
anchor_right = 0.760417
anchor_bottom = 0.907407
offset_top = 31.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 95
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="A" type="Button" parent="Exam_Camera/Examchoices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_15do6")
theme_override_styles/hover = SubResource("StyleBoxFlat_cel1m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lnw3n")
theme_override_styles/normal = SubResource("StyleBoxFlat_k7jyl")
text = "A"

[node name="B" type="Button" parent="Exam_Camera/Examchoices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_15do6")
theme_override_styles/hover = SubResource("StyleBoxFlat_cel1m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lnw3n")
theme_override_styles/normal = SubResource("StyleBoxFlat_k7jyl")
text = "B"

[node name="C" type="Button" parent="Exam_Camera/Examchoices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_15do6")
theme_override_styles/hover = SubResource("StyleBoxFlat_cel1m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lnw3n")
theme_override_styles/normal = SubResource("StyleBoxFlat_k7jyl")
text = "C"

[node name="FromInside" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.64197, 0, -3.34041e-07)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FromInside"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0593257, 0.360558, 5.88186)
shape = SubResource("BoxShape3D_lnw3n")

[node name="FromInside2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.71408, 0.0961485, -0.120188)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FromInside2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0177321, 1.09841, -5.52701)
shape = SubResource("BoxShape3D_k7jyl")

[node name="RoomDoor" type="Area3D" parent="."]

[node name="DoorCollision" type="CollisionShape3D" parent="RoomDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.51453, 1.13448, 5.861)
shape = SubResource("BoxShape3D_lajc7")
debug_color = Color(0.453356, 0.394376, 0.75227, 1)

[node name="Door" parent="RoomDoor" instance=ExtResource("2_lnw3n")]
transform = Transform3D(-7.98851e-09, 0, 0.185139, 0, 0.189917, 0, -0.182756, 0, -8.09267e-09, -8.39074, -0.167581, 5.94933)

[node name="RoomDoor2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.99559e-07, 0, -11.4286)

[node name="DoorCollision" type="CollisionShape3D" parent="RoomDoor2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.57681, 1.09973, 5.864)
shape = SubResource("BoxShape3D_cel1m")
debug_color = Color(0.453356, 0.394376, 0.75227, 1)

[node name="Door" parent="RoomDoor2" instance=ExtResource("2_lnw3n")]
transform = Transform3D(-7.98853e-09, 0, -0.185139, 0, 0.189917, 0, 0.182756, 0, -8.0927e-09, -8.39074, -0.167581, 5.84854)

[node name="Chairs" type="Node3D" parent="."]
transform = Transform3D(-1.369, -8.326e-09, 9.21074e-08, -8.63508e-08, 0.132, 5.65467e-09, -2.06713e-07, 1.22363e-09, -0.61, 0, 0.0588508, 0)

[node name="Rows" type="Node3D" parent="Chairs"]
transform = Transform3D(1, -2.27374e-13, 7.10543e-15, 2.27374e-13, 1, 7.02455e-16, 5.68434e-14, -1.0202e-15, 1, -0.00317518, 1.62496, -4.33843)

[node name="Chair4" parent="Chairs/Rows" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.32943e-16, 0, -2.17181e-13, 1, 3.55271e-14, 7.10543e-14, -1.77636e-15, 1, 0, 0, 0)
Interactive_Type = 2
Object_Type = 1

[node name="Chair5" parent="Chairs/Rows" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, 0, -1.24225e-15, 1, -4.30518, -2.86102e-06, 9.53674e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Chair6" parent="Chairs/Rows" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, -2.84217e-14, -1.24225e-15, 1, -2.05343, -1.3113e-06, 4.76837e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Chair7" parent="Chairs/Rows" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, -2.84217e-14, -1.24225e-15, 1, 2.38185, 1.54972e-06, -4.76837e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Chair8" parent="Chairs/Rows" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, -2.84217e-14, -1.24225e-15, 1, 4.66772, 3.09944e-06, -9.53674e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Rows2" type="Node3D" parent="Chairs"]
transform = Transform3D(1, -2.27374e-13, 7.10543e-15, 2.27374e-13, 1, 7.02455e-16, 5.68434e-14, -1.0202e-15, 1, -0.00317493, 1.62496, 0.868239)

[node name="Chair4" parent="Chairs/Rows2" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.32943e-16, 0, -2.17181e-13, 1, 3.55271e-14, 7.10543e-14, -1.77636e-15, 1, 0, 0, 0)
Interactive_Type = 2
Object_Type = 1

[node name="Chair5" parent="Chairs/Rows2" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, 0, -1.24225e-15, 1, -4.30518, -2.86102e-06, 9.53674e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Chair6" parent="Chairs/Rows2" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, -2.84217e-14, -1.24225e-15, 1, -2.05343, -1.3113e-06, 4.76837e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Chair7" parent="Chairs/Rows2" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, -2.84217e-14, -1.24225e-15, 1, 2.38185, 1.54972e-06, -4.76837e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Chair8" parent="Chairs/Rows2" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, -2.84217e-14, -1.24225e-15, 1, 4.66772, 3.09944e-06, -9.53674e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Rows3" type="Node3D" parent="Chairs"]
transform = Transform3D(1, -2.27374e-13, 7.10543e-15, 2.27374e-13, 1, 7.02455e-16, 5.68434e-14, -1.0202e-15, 1, -0.00317464, 1.62496, 6.99373)

[node name="Chair4" parent="Chairs/Rows3" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.32943e-16, 0, -2.17181e-13, 1, 3.55271e-14, 7.10543e-14, -1.77636e-15, 1, 0, 0, 0)
Interactive_Type = 2
Object_Type = 1

[node name="Chair5" parent="Chairs/Rows3" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, 0, -1.24225e-15, 1, -4.30518, -2.86102e-06, 9.53674e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Chair6" parent="Chairs/Rows3" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, -2.84217e-14, -1.24225e-15, 1, -2.05343, -1.3113e-06, 4.76837e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Chair7" parent="Chairs/Rows3" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, -2.84217e-14, -1.24225e-15, 1, 2.38185, 1.54972e-06, -4.76837e-07)
Interactive_Type = 2
Object_Type = 1

[node name="Chair8" parent="Chairs/Rows3" instance=ExtResource("2_cel1m")]
transform = Transform3D(1, 8.88178e-16, -7.10543e-15, -2.27374e-13, 1, 3.62296e-14, -2.84217e-14, -1.24225e-15, 1, 4.66772, 3.09944e-06, -9.53674e-07)
Interactive_Type = 2
Object_Type = 1

[node name="RoomSize" type="CSGBox3D" parent="."]
transform = Transform3D(-8.8761e-07, 0, 0.495023, 0, 8.63261, 0, -20.3062, 0, -2.16382e-08, 0, 10.142, 0)
material_override = SubResource("StandardMaterial3D_ppgk2")
gi_mode = 2
operation = 1
use_collision = true
size = Vector3(0.978516, 2.37549, 34.9795)

[node name="InsideSize" type="CSGBox3D" parent="RoomSize"]
transform = Transform3D(1, 0, -6.66134e-16, 0, 1, 0, -5.68434e-12, 0, 1, 0, 0.0982668, 0)
operation = 2
size = Vector3(0.774414, 3.08203, 33.2725)

[node name="Window" type="CSGBox3D" parent="RoomSize"]
transform = Transform3D(1, 0, -6.66134e-16, 0, 1, 0, -5.68434e-12, 0, 1, -0.124565, -1.00457, -5.79549e-08)
operation = 2
size = Vector3(0.201968, 0.120422, 35.7676)

[node name="Node3D" type="Node3D" parent="RoomSize/Window"]

[node name="CSGBox3D" type="CSGBox3D" parent="RoomSize/Window/Node3D"]
transform = Transform3D(1, 0, 2.22045e-16, 0, 1, 0, -6.07088e-11, 0, 1, 3.72529e-08, 0, -17.0816)
size = Vector3(0.223633, 0.144531, 0.38855)
material = SubResource("StandardMaterial3D_cel1m")

[node name="CSGBox3D2" type="CSGBox3D" parent="RoomSize/Window/Node3D"]
transform = Transform3D(1, 0, 2.22045e-16, 0, 1, 0, -6.11635e-11, 0, 1, -3.72529e-08, 0, 17.1142)
size = Vector3(0.223633, 0.144531, 0.38855)
material = SubResource("StandardMaterial3D_cel1m")

[node name="Window2" type="CSGBox3D" parent="RoomSize"]
transform = Transform3D(1, 0, -6.66134e-16, 0, 1, 0, -5.68434e-12, 0, 1, 0.111742, -1.00457, 1.54894e-06)
operation = 2
size = Vector3(0.201907, 0.120422, 35.6563)

[node name="Node3D2" type="Node3D" parent="RoomSize/Window2"]
transform = Transform3D(1, 0, 2.22045e-16, 0, 1, 0, -6.82121e-13, 0, 1, -0.000914291, 0, -7.62742e-07)

[node name="CSGBox3D" type="CSGBox3D" parent="RoomSize/Window2/Node3D2"]
transform = Transform3D(1, 0, 2.22045e-16, 0, 1, 0, -6.07088e-11, 0, 1, 3.72529e-08, 0, -17.0816)
size = Vector3(0.223633, 0.144531, 0.38855)
material = SubResource("StandardMaterial3D_cel1m")

[node name="CSGBox3D2" type="CSGBox3D" parent="RoomSize/Window2/Node3D2"]
transform = Transform3D(1, 0, 2.22045e-16, 0, 1, 0, -6.11635e-11, 0, 1, -3.72529e-08, 0, 17.1142)
size = Vector3(0.223633, 0.144531, 0.38855)
material = SubResource("StandardMaterial3D_cel1m")

[node name="Door" type="CSGBox3D" parent="RoomSize"]
transform = Transform3D(1, 0, -6.66134e-16, 0, 1, 0, -1.38698e-11, 0, 1, 0.273432, -1.05937, -16.9721)
operation = 2
size = Vector3(0.0605469, 0.286041, 1.59292)

[node name="Door2" type="CSGBox3D" parent="RoomSize"]
transform = Transform3D(1, 0, -6.66134e-16, 0, 1, 0, -1.3415e-11, 0, 1, -0.289367, -1.05937, -17.1277)
operation = 2
size = Vector3(0.0605469, 0.286041, 1.70278)

[node name="Board" type="CSGBox3D" parent="."]
transform = Transform3D(21.8065, 0, -1.77636e-15, 0, 8.63261, 0, 0, 0, 0.365501, -0.020575, 3.50992, 8.46356)
gi_mode = 2
operation = 1
use_collision = true
size = Vector3(0.624023, 0.698242, 5.33627)

[node name="Label3D" type="Label3D" parent="Board"]
physics_interpolation_mode = 2
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0.292984, 0.288006, -2.7449)
texture_filter = 0
modulate = Color(0, 0, 0, 1)
outline_modulate = Color(0, 0, 0, 0.988235)
text = "asda sd qwefa sdfasdf adsfsadf"
font_size = 11
outline_size = 1
horizontal_alignment = 0
vertical_alignment = 0
line_spacing = 3.0
autowrap_mode = 2
width = 150.0

[node name="DoorRiddle" type="Node3D" parent="."]
transform = Transform3D(1, 0, 9.92085e-10, 0, 1, 0, -9.92085e-10, 0, 1, 15.8947, 0.296183, 14.6945)
script = ExtResource("4_lnw3n")
Riddles = Array[String](["Dalawang batong itim, malayo ang nararating.", "Kay lapit-lapit na sa mata, di mo pa rin makita.", "Nakayuko ang reyna, di nalalaglag ang korona.", "Ate mo, ate ko, ate ng lahat ng tao.", "Sinampal ko muna bago inalok.", "Nang munti pa ay paruparo, nang lumaki ay latigo.", "Hidi tao, hindi hayop, nagsusuot ng damit.", "Bibingka ng hari, hindi mo mahati.", "Kumindat ang sultan, natakot ang bayan.", "Hayan na, hayan na, di mo pa makita.", "Gulay na kay tamis, pauti ang kutis"])
Answers = Array[String](["mata", "tenga", "bayabas", "atis", "sampalok", "sitaw", "sampayan", "tubig", "kidlat", "hangin", "singkamas"])

[node name="Bg" type="ColorRect" parent="DoorRiddle"]
anchors_preset = -1
anchor_left = 0.325
anchor_top = 0.374074
anchor_right = 0.675
anchor_bottom = 0.625926
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0975786, 0.258447, 0.244205, 0.627451)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="DoorRiddle/Bg"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0848214
anchor_top = 0.0955882
anchor_right = 0.915179
anchor_bottom = 0.904411
grow_horizontal = 2
grow_vertical = 0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="DoorRiddle/Bg/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "bugtong"
horizontal_alignment = 1
uppercase = true

[node name="ShowRiddle" type="RichTextLabel" parent="DoorRiddle/Bg/VBoxContainer"]
custom_minimum_size = Vector2(4.88, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.00234459, 0.00234459, 0.00234459, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Nilalaman na bugtong"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Answer" type="LineEdit" parent="DoorRiddle/Bg/VBoxContainer"]
custom_minimum_size = Vector2(2.64, 5.545)
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 26
placeholder_text = " Sagot"
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[connection signal="pressed" from="Exam_Camera/Examchoices/HBoxContainer/A" to="." method="_on_a_pressed"]
[connection signal="pressed" from="Exam_Camera/Examchoices/HBoxContainer/B" to="." method="_on_b_pressed"]
[connection signal="pressed" from="Exam_Camera/Examchoices/HBoxContainer/C" to="." method="_on_c_pressed"]
[connection signal="body_entered" from="FromInside" to="." method="_fromdoor1"]
[connection signal="body_entered" from="FromInside2" to="." method="_fromdoor2"]
[connection signal="body_entered" from="RoomDoor" to="." method="_Door_one_entered"]
[connection signal="body_entered" from="RoomDoor2" to="." method="_Door_two_entered"]
[connection signal="text_submitted" from="DoorRiddle/Bg/VBoxContainer/Answer" to="DoorRiddle" method="_answer_submit"]
